Hiding gamescore on mobile til we can figure out axis issue

--- a/src/app/cards/cards.component.css
+++ b/src/app/cards/cards.component.css
@@ -212,6 +212,10 @@
   .descriptor-text {
     display: none;
   }
+
+  .gs-container {
+    display: none;
+  }
 }
 
 @media only screen and (min-width: 1800px) {
